troca de chave2

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               function(err) { console.error("Error signing in", err); });
   }
   function loadClient() {
-    gapi.client.setApiKey("cMyQ-5YTw2PcV5MwuS9TfUAE");
+    gapi.client.setApiKey("");
     return gapi.client.load("https://content.googleapis.com/discovery/v1/apis/speech/v1p1beta1/rest")
         .then(function() { console.log("GAPI client loaded for API"); },
               function(err) { console.error("Error loading GAPI client for API", err); });
