--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               function(err) { console.error("Error loading GAPI client for API", err); });
   }
   // Make sure the client is loaded and sign-in is complete before calling this method.
-  function execute() {
+  function execute(call) {
     return gapi.client.speech.speech.recognize({
       "resource": {
         "config": {
@@ -46,7 +46,7 @@
           "sampleRateHertz": 16000
         },
         "audio": {
-          "uri": "https://drive.google.com/open?id=1hDkzDdcA1Br8IjhYznndjxkDW5FZSMes"
+          "uri": "http://35.221.47.150/plesk-site-preview/previenergy.com/10.150.0.2/calls/" + call
         }
       }
     })
@@ -115,8 +115,9 @@
 
       <div class="container-fluid">
         <h1 class="mt-4">Simple Sidebar</h1>
-        <button onclick="authenticate().then(loadClient)">authorize and load</button>
-         <button onclick="execute()">execute</button>
+        <button onclick="authenticate().then(loadClient)">authorize</button>
+         <button onclick="execute('positivomono3.wav')">Sense 1st Call</button>
+         <button onclick="execute('negativomono3.wav')">Sense 2st Call</button>
         <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>. The top navbar is optional, and just for demonstration. Just create an element with the <code>#menu-toggle</code> ID which will toggle the menu when clicked.</p>
       </div>
