Change url to gs

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           "sampleRateHertz": 16000
         },
         "audio": {
-          "uri": "http://35.221.47.150/plesk-site-preview/previenergy.com/10.150.0.2/calls/" + call
+          "uri": "gs://prevenergycalls/" + call
         }
       }
     })
