--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 // Handle the results here (response.result has the parsed body).
                 console.log("Response", response);
                 text = "";
-                for( let result in response.results){
+                for( let result in response.result.results){
                     text += result.alternatives[0].transcript;
                 }
                 $('#speach').text(text);
