--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
       <div class="container-fluid">
         <h1 class="mt-4">Análise de Satisfação do Cliente</h1>
         <button onclick="authenticate().then(loadClient)">Login</button>
-        <a href="gs://prevenergycalls/positivomono3.wav">Ouvir</a>
+        <a href="/calls/positivomono3.wav">Ouvir</a>
          <button onclick="execute('positivomono3.wav')"> Primeira ligação</button>
-         <a href="gs://prevenergycalls/negativomono3.wav">Ouvir</a>
+         <a href="/calls/negativomono3.wav">Ouvir</a>
          <button onclick="execute('negativomono3.wav')">Segunda ligação</button>        
       </div>
       <div class="container-fluid">
