--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <br>
         <img src="/img/play_arrow-24px.svg" onclick="play_audio('play','.positivo')">
         <img src="/img/pause-24px.svg" onclick="play_audio('pause','.positivo')">
-         <button onclick="execute('positivomono3.wav')"> Primeira ligação</button><br>
+         <button onclick="execute('positivomono3.wav')"> Primeira ligação</button><br><br>
          <img src="/img/play_arrow-24px.svg" onclick="play_audio('play','.negativo')">
         <img src="/img/pause-24px.svg" onclick="play_audio('pause','.negativo')">
          <button onclick="execute('negativomono3.wav')">Segunda ligação</button>        
